<resources>
    <string name="app_name">LandOfVoca</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <integer name="num_Of_Choices">4</integer>
    <string-array name="books">
        <item>toefl</item>
        <item>gre</item>
        <item>test</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="have_no_account_register_in">Have no account? register in</string>
    <string name="here">here</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="register">Register</string>

</resources>
