<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tigerteam.landofvoca.activity.LoginActivity">

    <EditText
        android:id="@+id/Login_UserPassword"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="356dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Login_UserName"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Login_UserPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <Button
        android:id="@+id/Login_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Login_UserPassword"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="@+id/Login_UserPassword"
        app:layout_constraintTop_toBottomOf="@+id/Login_UserPassword"
        app:layout_constraintVertical_bias="0.07" />

    <ProgressBar
        android:id="@+id/Login_ProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Login_UserPassword"
        app:layout_constraintStart_toStartOf="@+id/Login_UserPassword"
        app:layout_constraintTop_toTopOf="@+id/Login_UserName"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/Login_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/have_no_account_register_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_UserPassword"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/Login_Here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/here"
        android:textColor="@android:color/holo_green_light"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/Login_Register"
        app:layout_constraintStart_toEndOf="@+id/Login_Register"
        app:layout_constraintTop_toTopOf="@+id/Login_Register"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
